--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ h2,h3 {
 }
 
 .banner {
-    background: url(/img/banner.jpg);
+    background: url(img/banner.jpg);
     background-size: cover;
     -moz-background-size: cover;
     -webkit-background-size: cover;
