--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,19 +12,16 @@ h2,h3 {
     justify-content: flex-end;
 }
 
-.banner {
+.banne {
     background-color: #000;
-    background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    -o-background-size: cover;
+  
     width: 100%;
     height: 25rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    border-bottom: 10px solid #666;
+    border-bottom: 10px solid blue;
 }
 
 .cont-p {
