--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ h2,h3 {
 }
 
 .banner {
-    background-color: #000;
+    background-image: url(/img/bannermdp.jpg);
     width: 100%;
     height: 25rem;
     display: flex;
