--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ h2,h3 {
 }
 
 .banner {
-    background-image: url(./img/bannermdp.jpg);
+    background-image: url(img/bannermdp.jpg);
     background-repeat: no-repeat;
     width: 100%;
     height: 25rem;
@@ -21,7 +21,7 @@ h2,h3 {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    border-bottom: 10px solid red;
+    border-bottom: 10px solid orange;
 }
 
 .cont-p {
