--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,9 @@ h2,h3 {
 
 .banner {
     background-image: url(img/bannermdp.jpg);
+    background-image: url(img/bannermdp.jpg); 
+background-image: url(./img/bannermdp.jpg); 
+background-image: url(../img/bannermdp.jpg);
     background-repeat: no-repeat;
     width: 100%;
     height: 25rem;
