--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,10 +13,7 @@ h2,h3 {
 }
 
 .banner {
-    background-image: url(img/bannermdp.jpg);
-    background-image: url(img/bannermdp.jpg); 
-background-image: url(./img/bannermdp.jpg); 
-background-image: url(../img/bannermdp.jpg);
+    background-image: url(/img/bannermardel.png);
     background-repeat: no-repeat;
     width: 100%;
     height: 25rem;
