--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,8 @@ body {
  }
  
  .banner {
-     background-image: url(/img/bannermardel.png);
+     background-image: url(../img/bannermardel.png);
+   
      background-repeat: no-repeat;
      width: 100%;
      height: 25rem;
@@ -21,7 +22,7 @@ body {
      align-items: center;
      justify-content: center;
      flex-direction: row;
-     border-bottom: 10px solid #ccc;
+     border-bottom: 10px solid #F0BE10;
  }
  
  .cont-p {
