--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,8 +13,7 @@ body {
  }
  
  .banner {
-     background-image: url(../img/bannermardel.png);
-   
+     background-image: url(https://github.com/sslucasmv/preentrega2coder/blob/master/img/bannermardel.png);
      background-repeat: no-repeat;
      width: 100%;
      height: 25rem;
