--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,9 @@ body {
  }
  
  .banner {
-    background-image: url(https://raw.githubusercontent.com/sslucasmv/preentrega2coder/master/img/bannermdp.jpg);
+    background-image: url(bannermardel.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     /*background-color: #000;*/
      width: 100%;
      height: 25rem;
@@ -21,7 +23,7 @@ body {
      align-items: center;
      justify-content: center;
      flex-direction: row;
-     border-bottom: 10px solid black;
+     border-bottom: 10px solid blueviolet;
  }
  
  .cont-p {
