--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ body {
  }
  
  .banner {
-    background-image: url(bannermardel.png);
+    background-image: url('../img/banner.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     /*background-color: #000;*/
