--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,12 +8,61 @@ body {
  }
  
 
+
+
  /* elementos menu top  */
+
+ .cont-cards {
+    display: flex;
+    flex-direction: column;
+    width: 100% !important;
+}
+
+
+
+.cont-cards .card-hab {
+    border-radius: 4px solid #ddd;
+    background-color: red !important;
+}
+
+.cont-cards .card-hab img {
+    width: 100%;
+}
+
+.card-h img {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    width: 100%;
+}
+
+.card-default {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-f {
+    padding: 10px;
+    background-color: #fff;
+    border:1px solid #ddd;
+    height: 150px !important;
+   
+}
+
+
+
+.card-f h2 {
+    font-size: 1.125rem;
+}
+
+.card-f.mheight {
+
+min-height: auto !important;
+}
 
 
  .redes {
     height:100px;
-    display: none;;
+    display: none;
  }
 
 
@@ -27,7 +76,6 @@ body {
     text-decoration: none !important;
 
 }
-
 
 
 .redes nav ul li {
@@ -45,6 +93,98 @@ body {
 
 
 
+/* card commentarios  */
+ 
+.titulo-booking {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.titulo-booking h2 {
+    font-size:1.125rem;
+}
+
+.titulo-booking h3 {
+    font-size: 1rem;
+}
+
+.titulo-booking h4 {
+    font-size: .875rem;
+}
+
+
+
+ .cont-comment {
+     width: 100%;
+     height: auto;
+     display: flex;
+     flex-direction: column;
+     justify-content:space-evenly;
+     margin-top:1.875rem;
+     padding-bottom: 1.25rem;
+ }
+ 
+ .cont-comment .card-comment {
+     padding:0.975rem;
+     border: 1px solid #ccc;
+     background-color: #fafafa;
+     width:100%;
+     margin-bottom: 10px;
+     min-height: 140;
+     border-radius: 4px;
+     box-shadow: 0 0px 3px 0px rgba(0, 0, 0, 0.1), 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+ }
+ 
+ .cont-comment .card-comment .card-comment-header {
+     display: flex;
+     flex-direction: row;
+     justify-content:flex-start
+ }
+ 
+ .cont-comment .card-comment .avatar {
+     width: 4rem;
+     height: 4rem;
+     border-radius: 150px;
+     background-color: #666;
+     border: 3px solid #C0CAD1;
+ }
+ 
+ .title-user {
+     display: flex;
+     flex-direction: column;
+ }
+ 
+ .comment-name {
+     color:#063855;
+     font-size: 1rem;
+     margin-left: .9375rem;
+     margin-TOP:5px;
+ }
+ 
+ .comment-stars {
+     margin-left:1rem;
+ }
+ 
+ .card-comment blockquote {
+     margin:0.3125rem;
+     padding: .800rem !important;
+ }
+ 
+ .p-comment {
+     font-family: "IBM Plex Sans", sans-serif;
+     font-weight: 500;
+     font-size:14px   
+ }
+ 
+ /* end card comments */
+
+/* main */
+
+main {
+    border-top: 4px solid #1A3755;
+}
+
 /* banner index */
 
 .banner {
@@ -58,7 +198,7 @@ body {
      align-items: center;
      justify-content: center;
      flex-direction: row;
-     border-bottom: 10px solid #999;
+     border-bottom: 10px solid #1A3755;
  }
 
  .cont-p {
@@ -137,6 +277,27 @@ ul.footer-social li a {
 }
 
 
+
+
+.text-alignC {
+    text-align: center;
+ }
+ 
+ .info-advice {
+     padding:0.625rem;
+     text-align: center;
+     margin-top: .9375rem;
+     border-radius: 2px;
+ }
+ 
+ .info-advice p {
+     font-size: 1.125rem;
+     font-weight:bolder;
+     margin-top: .625rem;
+     color:#FF6600 !important;
+     text-shadow: 1px 1px 2px #ddd ;
+ }
+ 
 /* pantalla de tablet */
 
 
@@ -144,6 +305,27 @@ ul.footer-social li a {
 /* pantalla de pc  */
 
 @media only screen and (min-width:940px){
+
+ /* elementos menu top  */
+ .cont-cards {
+    display: flex;
+    flex-direction: row !important;
+    gap: 20px;
+    width: 100% !important;
+
+}
+
+.card-f {
+    min-height:240px !important;
+}
+
+.card-f.mheight {
+
+    min-height: 300px !important;
+     
+
+}
+
 
     .ds-none {
         display: block;
@@ -214,7 +396,9 @@ ul.footer-social li a {
      width: 100%;
      height: auto;
      display: flex;
+     flex-direction:  row;
      justify-content:space-evenly;
+     gap: 5px;
      margin-top:1.875rem;
      padding-bottom: 1.25rem;
  }
@@ -275,16 +459,9 @@ ul.footer-social li a {
  
  /* cards personalizadas */
  
- .cont-cards {
-     display: flex;
-     flex-direction: row;
-     gap: 20px;
-     justify-content: space-around;
- }
+
  
- .cont-cards .card{
-     width: 22rem;
- }
+
  
  /* google maps */
  
@@ -407,4 +584,15 @@ ul.footer-social li a {
      text-shadow: 1px 1px 2px #ddd ;
  }
  
+ }
+
+ .cont-cards {
+    display: flex;
+    flex-direction: row !important;
+    gap: 20px;
+    justify-content: space-around;
+ }
+
+ .cont-cards .card {
+    width: 33% !important;
  }
