--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,25 +8,57 @@ body {
  }
  
 
+ .logo img {
+    width: 12.5rem;
+    height: 3.4375rem;
+}
 
 
  /* elementos menu top  */
+
+
+
+/* #### HEADER #### */
+
+/* header menu top */
+
+.nav-fs {
+    font-size: 1.125rem;
+}
+
+.navbar-nav ul li a { 
+    color: #ccc;
+    font-family: "Karla", sans-serif;
+    font-weight: 400;
+}
+
+.navbar-nav ul li a:hover {
+    color: #1A3755;
+    background-color: #ddd;
+}
+
+a.nav-link {
+    border-bottom: 3px solid #fff;
+    padding: 10px 15px 10px 15px;
+}
+
+a.nav-link:hover {
+    color:#444;
+    display: flex;
+    border-bottom: 3px solid #ddd;
+    background-color: #fafafa;
+} 
+
+a.active {
+    color: skyblue;
+    border-bottom: 3px solid #029DCA !important;
+}
+
 
  .cont-cards {
     display: flex;
     flex-direction: column;
     width: 100% !important;
-}
-
-
-
-.cont-cards .card-hab {
-    border-radius: 4px solid #ddd;
-    background-color: red !important;
-}
-
-.cont-cards .card-hab img {
-    width: 100%;
 }
 
 .card-h img {
@@ -45,9 +77,7 @@ body {
     background-color: #fff;
     border:1px solid #ddd;
     height: 150px !important;
-   
 }
-
 
 
 .card-f h2 {
@@ -55,16 +85,13 @@ body {
 }
 
 .card-f.mheight {
-
-min-height: auto !important;
+    min-height: auto !important;
 }
-
 
  .redes {
     height:100px;
     display: none;
  }
-
 
  .info-footer ul li a{
     list-style: none;
@@ -74,9 +101,7 @@ min-height: auto !important;
 
 .link-dnone{
     text-decoration: none !important;
-
 }
-
 
 .redes nav ul li {
     font-size: 1rem;   
@@ -90,8 +115,6 @@ min-height: auto !important;
 .ds-none {
     display: none;
 }
-
-
 
 /* card commentarios  */
  
@@ -112,8 +135,6 @@ min-height: auto !important;
 .titulo-booking h4 {
     font-size: .875rem;
 }
-
-
 
  .cont-comment {
      width: 100%;
@@ -188,9 +209,9 @@ main {
 /* banner index */
 
 .banner {
-    background-image: url('../img/banner.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position:0 5%;
      width: 100%;
      /*height: 25rem;*/
      height: 12.5rem;
@@ -200,6 +221,26 @@ main {
      flex-direction: row;
      border-bottom: 10px solid #1A3755;
  }
+
+ .banner.uno {
+    background-image: url('../img/banner.jpg');
+ }
+
+ .banner.dos {
+    background-image: url('../img/torreon.jpg');
+
+ }
+
+ .banner.tres {
+    background-image: url('../img/mdpwall.jpg');
+
+ }
+
+ .banner.cuatro {
+    background-image: url('../img/casino2.jpg');
+
+ }
+
 
  .cont-p {
     width: auto ;
@@ -215,6 +256,28 @@ main {
  .titulobanner {
     color: #fff;
 }
+
+
+/* mensaje promociones  */
+
+.text-alignC {
+    text-align: center;
+ }
+ 
+ .info-advice {
+     padding:0.625rem;
+     text-align: center;
+     margin-top: .9375rem;
+     border-radius: 2px;
+ }
+ 
+ .info-advice p {
+     font-size: 1.125rem;
+     font-weight:bolder;
+     margin-top: .625rem;
+     color:#FF6600 !important;
+     text-shadow: 1px 1px 2px #ddd ;
+ }
 
 
 /* ### FOOTER ### */
@@ -276,35 +339,142 @@ ul.footer-social li a {
     margin-right: .5rem
 }
 
+.col-sm-ds-none {
+    display:none;
+
+}
+
+.col-md-ds-none {
+    display:none;
+
+}
+
+
+@media only screen and (min-width:480px){
+    
+    .map-google {
+        width:100%;
+        height:16rem;
+    }
+
+}
+
+
+@media only screen and (min-width:600px){
+    
+    .map-google {
+        width:100%;
+        height:20rem;
+    }
+
+    h3.ds-none {
+        display: none !important
+    }
+
+    .map-google {
+        width:100%;
+        height:18rem;
+    }
+
+    .col-sm-ds-none {
+        display: none;
+
+    }
+
+    .col-md-ds-none {
+        display: none;
+
+    }
 
 
 
-.text-alignC {
-    text-align: center;
- }
- 
- .info-advice {
-     padding:0.625rem;
-     text-align: center;
-     margin-top: .9375rem;
-     border-radius: 2px;
- }
- 
- .info-advice p {
-     font-size: 1.125rem;
-     font-weight:bolder;
-     margin-top: .625rem;
-     color:#FF6600 !important;
-     text-shadow: 1px 1px 2px #ddd ;
- }
- 
-/* pantalla de tablet */
+}
 
+
+
+@media only screen and (min-width:720px){
+    
+    h3.ds-none {
+        display:none !important
+    }
+    
+    hr.ds-none {
+        display: none !important;
+    }
+    
+
+    .map-google {
+        width:100%;
+        height:18rem;
+    }
+
+    .col-sm-ds-none {
+        display: none;
+
+    }
+
+    .col-md-ds-none {
+        display:none;
+
+    }
+
+    .ds-lg-none {
+        display: none !important;
+    }
+
+}
+
+@media only screen and (min-width:748px){
+    
+    h3.ds-none {
+        display:block !important
+    }
+
+    hr.ds-none {
+        display:block !important
+    }
+
+    .map-google {
+        width:100%;
+        height:18rem;
+    }
+
+    .col-sm-ds-none {
+        display: block;
+
+    }
+
+    .col-md-ds-none {
+        display:block;
+
+    }
+
+    li.ds-lg-none {
+        display:none !important;
+       }
+
+
+}
 
 
 /* pantalla de pc  */
 
 @media only screen and (min-width:940px){
+    .col-sm-ds-none {
+        display: block;
+
+    }
+
+    li.ds-lg-none {
+        display:none !important;
+       }
+
+    .col-md-ds-none {
+        display: block;
+
+    }
+
+
 
  /* elementos menu top  */
  .cont-cards {
@@ -312,7 +482,6 @@ ul.footer-social li a {
     flex-direction: row !important;
     gap: 20px;
     width: 100% !important;
-
 }
 
 .card-f {
@@ -320,18 +489,13 @@ ul.footer-social li a {
 }
 
 .card-f.mheight {
-
     min-height: 300px !important;
-     
-
 }
 
-
-    .ds-none {
-        display: block;
-    }
+.ds-none {
+     display: block;
+}
     
-
  h2,h3 {
      color:#1A3755 !important
  }
@@ -344,18 +508,18 @@ ul.footer-social li a {
     display: flex !important;
  }
 
- 
+/* BANNER */
+
 .banner { 
     display:flex;
     height: 25rem;
 }
 
-
 .titulobanner {
     display: none;
 }
 
- .cont-p {
+.banner .cont-p {
      width: 60%;
      background-color: rgba(33, 42, 49, 0.589);
      padding:10px 30px 5px 30px;
@@ -367,6 +531,8 @@ ul.footer-social li a {
      font-size: 1.375rem;
      color:#fff;  
  }
+
+ /* comentarios clientes */
  
  .bg-com {
      background-color: #F8F9FA !important;
@@ -390,7 +556,7 @@ ul.footer-social li a {
      font-size: .875rem;
  }
  
- /* card commentarios  */
+ /* comentarios booking - card commentarios  */
  
  .cont-comment {
      width: 100%;
@@ -408,7 +574,7 @@ ul.footer-social li a {
      border: 1px solid #ccc;
      background-color: #fafafa;
      width: 20rem;
-     max-height: 18rem;
+     min-height: 15rem;
      border-radius: 4px;
      box-shadow: 0 0px 3px 0px rgba(0, 0, 0, 0.1), 0 3px 5px 0 rgba(0, 0, 0, 0.1);
  }
@@ -432,7 +598,6 @@ ul.footer-social li a {
      flex-direction: column;
  }
  
-
  .comment-name {
      color:#063855;
      font-size: 1.125rem;
@@ -457,69 +622,27 @@ ul.footer-social li a {
  
  /* end card comments */
  
- /* cards personalizadas */
- 
 
- 
-
- 
  /* google maps */
  
  .map-google {
      width:100%;
      height:20rem;
-   
  }
  
-
  /* reemplazar por bold en el html */
+
  .form-label {
      font-weight:600;
  }
+
  /*  ///// */
 
  ::placeholder {
-    color: #c1c1c1 !important;
+    color: #ccc !important;
     opacity: 1; /* Firefox */
 }
 
-
-/* #### HEADER #### */
-
-/* header menu top */
-
- .nav-fs {
-     font-size: 1.125rem;
- }
-
- .navbar-nav ul li a { 
-     color: #ccc;
-     font-family: "Karla", sans-serif;
-     font-weight: 400;
- }
- 
- .navbar-nav ul li a:hover {
-     color: #1A3755;
-     background-color: #ddd;
- }
- 
- a.nav-link {
-     border-bottom: 3px solid #fff;
-     padding: 10px 15px 10px 15px;
- }
- 
- a.nav-link:hover {
-     color:#444;
-     display: flex;
-     border-bottom: 3px solid #ddd;
-     background-color: #fafafa;
- } 
- 
- a.active {
-     color: skyblue;
-     border-bottom: 3px solid #029DCA !important;
- }
- 
  /* header - redes */
 
  .redes {
@@ -558,33 +681,7 @@ ul.footer-social li a {
      color:#ccc;
  }
 
- /*  */
- 
- 
-
-
 /* MENSAJE DESTACADO   */
-
- .text-alignC {
-    text-align: center;
- }
- 
- .info-advice {
-     padding:0.625rem;
-     text-align: center;
-     margin-top: .9375rem;
-     border-radius: 2px;
- }
- 
- .info-advice p {
-     font-size: 1.125rem;
-     font-weight:bolder;
-     margin-top: .625rem;
-     color:#FF6600 !important;
-     text-shadow: 1px 1px 2px #ddd ;
- }
- 
- }
 
  .cont-cards {
     display: flex;
@@ -596,3 +693,4 @@ ul.footer-social li a {
  .cont-cards .card {
     width: 33% !important;
  }
+}
