--- a/css/estilos.css
+++ b/css/estilos.css
@@ -93,7 +93,7 @@ a.active {
     display: none;
  }
 
- .info-footer ul li a{
+ .info-footer li a{
     list-style: none;
     text-decoration: none !important;
 
@@ -214,7 +214,7 @@ main {
     background-position:0 5%;
      width: 100%;
      /*height: 25rem;*/
-     height:22.5rem;
+     height:12.5rem;
      display: flex;
      align-items: center;
      justify-content: center;
@@ -244,7 +244,7 @@ main {
 
  .cont-p {
     width: auto ;
-    background-color: rgba(33, 42, 49, 0.589);
+    background-color: rgba(33, 42, 49, 0.7);
     padding:10px 30px 5px 30px;
     border-radius: 4px;
 }
@@ -440,7 +440,7 @@ ul.footer-social li a {
     }
 
     .col-sm-ds-none {
-        display: block;
+        display: none;
 
     }
 
@@ -514,7 +514,7 @@ ul.footer-social li a {
 
 .banner { 
     display:flex;
-    /*height: 25rem;*/
+    height:22.5rem ;
 }
 
 .titulobanner {
@@ -523,7 +523,6 @@ ul.footer-social li a {
 
 .banner .cont-p {
      width: 60%;
-     background-color: rgba(33, 42, 49, 0.589);
      padding:10px 30px 5px 30px;
      border-radius: 4px;
  }
