--- a/scss/base/components/_cards.scss
+++ b/scss/base/components/_cards.scss
@@ -4,26 +4,41 @@
 .cont-cards {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     width: 100% !important;
+    gap: 15px !important;
+    padding: 10px;
+    
  }
  
  .card-h img {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
     width: 100%;
  }
  
  .card-default {
-    display: flex;
-    flex-direction: column;
- }
+                display: flex;
+                flex-direction: column;
+                border:1px solid #ddd ;
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+                transition: transform .5s;
+
+                &:hover {
+                    border:1px solid #999 ;
+                    transform: scale(1.02);
+                }       
+}
  
  .card-f {
-    padding: 10px;
-    background-color: #fff;
-    border:1px solid #ddd;
-    height: auto !important;
+           
+            background-color: #fff;
+            height: auto !important;
+            padding: .625rem;
+       
  }
+
  
  
  .card-f h2 {
