--- a/css/estilos.css
+++ b/css/estilos.css
@@ -565,6 +565,7 @@ ul.list {
     flex-direction: row;
     list-style: none;
     justify-content: flex-end;
+    margin-top: 0.375rem !important;
   }
   .redes nav ul li {
     margin-top: 0.3125rem;
@@ -575,7 +576,7 @@ ul.list {
     font-size: 1.125rem !important;
     color: #fafafa;
     margin-top: 0.25rem;
-    margin-left: 0.25rem;
+    margin-left: 0.5rem;
   }
   .fa-instagram:hover, .fa-facebook-square:hover {
     color: #ccc;
