--- a/scss/base/components/_mediaQueries.scss
+++ b/scss/base/components/_mediaQueries.scss
@@ -303,6 +303,7 @@
         flex-direction: row;
         list-style: none;
         justify-content: flex-end;
+        margin-top: 0.375rem !important;
     }
  
     .redes nav ul li {
@@ -315,7 +316,7 @@
         font-size: 1.125rem !important;
         color: #fafafa;
         margin-top: .25rem;
-        margin-left: .25rem;
+        margin-left: .50rem;
     }
  
     .fa-instagram:hover , .fa-facebook-square:hover {
