animacion pagina servicios

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -263,6 +263,30 @@ main {
   color: #fff;
 }
 
+.cont-animation {
+  display: inline-block;
+  margin-top: 5px;
+}
+
+.texto {
+  width: 100%;
+  animation: animacion 1.5s steps(25), transparent 0.5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #333;
+  border-right: 3px solid;
+}
+
+@keyframes animacion {
+  from {
+    width: 0px;
+  }
+}
+@keyframes transparent {
+  50% {
+    border-color: transparent;
+  }
+}
 /* MENSAJE PUBLICIDAD */
 .text-alignC {
   text-align: center;
