--- a/scss/base/components/_footer.scss
+++ b/scss/base/components/_footer.scss
@@ -1,22 +1,3 @@
-/* ### FOOTER ### */
-
-/* lista redes, datos  */
-/*
-ul.list {
-    list-style: none;
-    margin:0;
-    padding: 0;
- }
- 
- ul.list li {
-    margin-top: .3125rem;
- }
- 
- ul.list li b {
-    color:#ccc;
-    font-weight:medium;
- }*/
- 
 footer {
    background-color: map-get($bgColor , Footer );
 }
@@ -29,18 +10,20 @@ footer {
  
  .footer-items h3 {
    font-size: map-get($fontSize, fonts20);
-    color: #ccc !important;
+    color: #ccc;
+    border-bottom: 1px solid #666;
+    padding-bottom:0.9375rem;
  }
 
- .footer-items hr {
-    margin-bottom: .5rem;
- }
- 
+
  .footer-items ul {
+
+                  margin:0;
+                  padding:0;
  
                     li {
-                    margin:0.375rem 0  .3rem 0 !important;
-                    padding: 0;
+                    margin:0.375rem 0px  .3rem 0px;
+                    padding: 0px !important;
                     font-size: map-get($fontSize, fonts14);
                     
  
@@ -51,11 +34,19 @@ footer {
                     &:hover {
                     color:#F0BE10;
                     }
+
+
                     }
                 }
  }
  
  
+ .footer-items p {
+   color: map-get($bgColor, FooterP);
+
+ }
+
+
  .icon-footer {
     display: block;
     margin-right: .5rem
@@ -71,8 +62,6 @@ footer {
  }
 
  /* elementos del footer */
-
-
 
  .ds-none {
     display: none;
