--- a/scss/base/components/_reset.scss
+++ b/scss/base/components/_reset.scss
@@ -1,16 +1,16 @@
 * {
     margin: 0;
-    padding:0px;
+    padding:0;
     list-style: none;
 
 }
 
 ul , ul li { 
     list-style: none;
-    margin:0 !important;
-    padding:0 !important;
+    margin:0;
+    padding:0;
 }
 
 a {
-    text-decoration: none !important;
+    text-decoration: none;
 }
